--- a/hu_hpux_11iv3.adoc
+++ b/hu_hpux_11iv3.adoc
@@ -21,7 +21,7 @@ You can download the compressed file containing the Host Utilities software pack
 
 .Steps
 
-.	Download a copy of the compressed file containing the Host Utilities from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site] to a directory on your host.
+.	Download a copy of the compressed file containing the Host Utilities from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^] to a directory on your host.
 
 .	 Go to the directory containing the download.
 
