--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -224,4 +224,4 @@ vs_sanboot                    2010d039ea1308e5   /vol/sanboot_169/lun    /dev/sd
 
 == Notice File
 
-link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2559115[Linux Unified Host Utilities Notice File]
+link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2559115[Linux Unified Host Utilities Notice File^]
