--- a/index.adoc
+++ b/index.adoc
@@ -24,6 +24,6 @@ For iSCSI and FC, this documentation replaces the traditional Linux Unified Host
 
 You can find additional information on SAN configurations in the following documentation:
 
-link:https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-asa-config/home.html[All SAN Array Software Configuration Guide]
-link:https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-sanag/home.html[SAN Administration Guide]
-link:https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-sanconf/home.html[SAN Configuration Guide]
+link:https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-asa-config/home.html[All SAN Array Software Configuration Guide^]
+link:https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-sanag/home.html[SAN Administration Guide^]
+link:https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-sanconf/home.html[SAN Configuration Guide^]
