--- a/hu_aix_61.adoc
+++ b/hu_aix_61.adoc
@@ -21,7 +21,7 @@ summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTA
 
 * For reliable operation, you must verify that your entire iSCSI, FC, or FCoE configuration is supported.
 +
-You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623%3B64703%3B&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool] to verify your configuration.
+You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623%3B64703%3B&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify your configuration.
 
 
 == SAN Toolkit
@@ -52,7 +52,7 @@ NOTE: The SAN toolkit is supported on AIX and PowerVM/VIOS OS versions.
 == Installing AIX Host Utilities
 
 
-The NetApp AIX Host Utilities software package is available on the https://mysupport.netapp.com/NOW/cgi-bin/software/?product=Host%2BUtilities%2B-%2BSAN&platform=Linux[NetApp Support Site] in a compressed tar.gz file.
+The NetApp AIX Host Utilities software package is available on the https://mysupport.netapp.com/NOW/cgi-bin/software/?product=Host%2BUtilities%2B-%2BSAN&platform=Linux[NetApp Support Site^] in a compressed tar.gz file.
 
 You must install the AIX Host Utilities Kit while using AIX MPIO with NetApp ONTAP Storage.
 
