--- a/hu_citrix_8x.adoc
+++ b/hu_citrix_8x.adoc
@@ -166,5 +166,5 @@ NOTE: Citrix Hypervisor recommends use of Citrix VM tools for all Linux and Wind
 | Title
 | Description
 | Citrix Tracker ID
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1242343[1242343^] | Kernel disruption on Citrix Hypervisor 8.0 with QLogic QLE2742 32GB FC during storage failover operations | Kernel disruption might occur during storage failover operations on Citrix Hypervisor 8.0 kernel (4.19.0+1) with QLogic QLE2742 32GB HBA. This issue prompts a reboot of the operating system and causes application disruption. If kdump is configured, the kernel disruption generates a vmcore file under the /var/crash/ directory. You can use the vmcore file to understand the cause of the failure. After the kernel disruption, you can recover the operating system by rebooting the host operating system and restarting the application. | link:https://tracker.citrix.com/browse/NETAPP-98[NETAPP-98]
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1242343[1242343^] | Kernel disruption on Citrix Hypervisor 8.0 with QLogic QLE2742 32GB FC during storage failover operations | Kernel disruption might occur during storage failover operations on Citrix Hypervisor 8.0 kernel (4.19.0+1) with QLogic QLE2742 32GB HBA. This issue prompts a reboot of the operating system and causes application disruption. If kdump is configured, the kernel disruption generates a vmcore file under the /var/crash/ directory. You can use the vmcore file to understand the cause of the failure. After the kernel disruption, you can recover the operating system by rebooting the host operating system and restarting the application. | link:https://tracker.citrix.com/browse/NETAPP-98[NETAPP-98^]
 |===
