--- a/hu_rhel_65.adoc
+++ b/hu_rhel_65.adoc
@@ -131,7 +131,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=758271[758271^] | bnx2 firmware fails to load when booting with custom initrd (dracut -f) | Broadcom NetXtreme II Gigabit controller ports will not ping due to bnx2 firmware fails to load during boot with custom initrd. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1007463[1007463^]
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=799394[799394^] | RHEL 6U5: Emulex 16G FC (LPe16002B-M6) host crash is seen during I/O with storage failover operations | 16G FC Emulex (LPe16002B-M6) host crash is seen during I/O with storage failover operations. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1063699[1063699^]
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=786571[786571^] | QLogic FCoE host hangs/path failures observed in RHEL 6.5 during I/O with storage failover operations | QLogic FCoE (QLE8242) host hangs/path failures are observed in RHEL 6.5 during I/O with storage failover operations. In such scenarios, you might see the following message: "Mailbox cmd timeout occurred, cmd=0x54, mb[0]=0x54. Scheduling ISP abort" messages which leads to host hung/path failures. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1068619[1068619^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=801580[801580^] | QLogic 16G FC host hangs or path failures observed in RHEL 6.5 during I/O with storage failover operations | The I/O delays of more than 600 seconds are observed with QLogic 16G FC host (QLE2672) during storage failover operations. In such scenarios, the following message is displayed: "Failed mbx[0]=54, mb[1]=0, mb[2]=76b9, mb[3]=5200, cmd=54" | link:https://bugzilla.redhat.com/show_bug.cgi?id=1068622[1068622]
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=801580[801580^] | QLogic 16G FC host hangs or path failures observed in RHEL 6.5 during I/O with storage failover operations | The I/O delays of more than 600 seconds are observed with QLogic 16G FC host (QLE2672) during storage failover operations. In such scenarios, the following message is displayed: "Failed mbx[0]=54, mb[1]=0, mb[2]=76b9, mb[3]=5200, cmd=54" | link:https://bugzilla.redhat.com/show_bug.cgi?id=1068622[1068622^]
 |===
 
 == Release Notes
