--- a/nvme_rhel_83.adoc
+++ b/nvme_rhel_83.adoc
@@ -37,7 +37,7 @@ include::_include/nvme/reuse_nvme_enabling_step1_substeps.adoc[]
 4.18.0-240.el8.x86_64
 ----
 +
-See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix] for the most current list of supported versions.
+See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
 
 . Install the nvme-cli package.
 +
