updated link fixes

--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -317,7 +317,7 @@ The following values are set by the Windows Unified Host Utilities installer. Al
 |===
 
 .Related information
-Refer to the https://docs.microsoft.com/en-us/troubleshoot/windows-server/performance/windows-registry-advanced-users[Microsoft documents] for the registry parameter details.
+Refer to the https://docs.microsoft.com/en-us/troubleshoot/windows-server/performance/windows-registry-advanced-users[Microsoft documents^] for the registry parameter details.
 
 == FC HBA values set by Windows Host Utilities
 
