--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -20,7 +20,7 @@ NVMe over Fibre Channel (NVMe/FC) is supported on ONTAP 9.7 or later.
 
 == Features
 
-*	ESXi initiator host can run both NVMe/FC and FCP traffic through the same adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe] for a list of supported FC adapters and controllers. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix] for the most current list of supported configurations and versions.
+*	ESXi initiator host can run both NVMe/FC and FCP traffic through the same adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported configurations and versions.
 *	Beginning with ONTAP 9.9.1 P3, NVMe/FC feature is supported for ESXi 7.0 update 3.
 *	For ESXi 7.0 and later releases, HPP (high performance plugin) is the default plugin for NVMe devices.
 
@@ -48,7 +48,7 @@ Host NQN: nqn.2014-08.com.vmware:nvme:nvme-esx
 
 === Configuring Broadcom/Emulex
 
-.	Check whether the configuration is supported with required driver/firmware by referring to link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix].
+.	Check whether the configuration is supported with required driver/firmware by referring to link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 
 .	Set the lpfc driver parameter `lpfc_enable_fc4_type=3` for enabling NVMe/FC support in the `lpfc` driver and reboot the host.
 
