--- a/nvme_ol_82.adoc
+++ b/nvme_ol_82.adoc
@@ -26,7 +26,7 @@ None.
 
 . Install Oracle Linux 8.2 on the server.
 
-. After the installation is complete, verify that you are running the supported Unbreakable Enterprise kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix].
+. After the installation is complete, verify that you are running the supported Unbreakable Enterprise kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 +
 ----
 # uname -r
