--- a/_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc
+++ b/_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc
@@ -1,4 +1,4 @@
-For the most current list of supported adapters see the see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix].
+For the most current list of supported adapters see the see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 
 . Verify that you are using the supported adapter.
 +
