--- a/hu_sles_15.adoc
+++ b/hu_sles_15.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_suse_15.html
+permalink: hu_sles_15.html
 keywords: host utilities, suse linux enterprise server 15, suse, linux, 15, netapp, ontap
 summary: Describes how to use SUSE Linux Enterprise Server 15 with ONTAP
 ---
