--- a/hu_sles_15SP2.adoc
+++ b/hu_sles_15SP2.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_suse_15SP2.html
+permalink: hu_sles_15SP2.html
 keywords: host utilities, suse linux enterprise server 15 sp2, suse, linux, 15 sp2, netapp, ontap
 summary: Describes how to use SUSE Linux Enterprise Server 15 SP2 with ONTAP
 ---
