--- a/hu_sles_12SP3.adoc
+++ b/hu_sles_12SP3.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_suse_12SP3.html
+permalink: hu_sles_12SP3.html
 keywords: host utilities, suse linux enterprise server 12 SP3, suse, linux, 12 SP3, netapp, ontap
 summary: Describes how to use SUSE Linux Enterprise Server 12 SP3 with ONTAP
 ---
