--- a/hu_sles_12SP4.adoc
+++ b/hu_sles_12SP4.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
-permalink: hu_suse_15SP1.html
-keywords: host utilities, suse linux enterprise server 15 sp1, suse, linux, 15 sp1, netapp, ontap
-summary: Describes how to use SUSE Linux Enterprise Server 15 SP1 with ONTAP
+permalink: hu_sles_12SP4.html
+keywords: host utilities, suse linux enterprise server 12 SP4, suse, linux, 12 SP4, netapp, ontap
+summary: Describes how to use SUSE Linux Enterprise Server 12 SP4 with ONTAP
 ---
 
-= Using SUSE Linux Enterprise Server 15 SP1 with NetApp ONTAP
+= Using SUSE Linux Enterprise Server 12 SP4 with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -25,13 +25,13 @@ include::_include/hu/reuse_hu_san_toolkit.adoc[]
 == SAN Booting
 
 .What you'll need
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=84067;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=86528;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
 include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
 == Multipathing
 
-For SUSE Linux Enterprise Server 15 SP1 the /etc/multipath.conf file must exist, but you do not need to make specific changes to the file. SUSE Linux Enterprise Server 15 SP1 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
+For SUSE Linux Enterprise Server 12 SP4 the /etc/multipath.conf file must exist, but you do not need to make specific changes to the file. SUSE Linux Enterprise Server 12 SP4 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
 
 include::_include/hu/reuse_hu_multipathing.adoc[]
 
@@ -54,22 +54,22 @@ include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
 ----
-# multipath -ll
+#multipath -ll
 3600a09803831347657244e527766394e dm-5 NETAPP,LUN C-Mode
-size=80G  features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
+size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
 |-+- policy='service-time 0' prio=50 status=active
 | |- 11:0:1:0 sdj 8:144 active ready running
 | |- 11:0:2:0 sdr 65:16 active ready running
 `-+- policy='service-time 0' prio=10 status=enabled
- |- 11:0:0:0 sdb 8:i6 active ready running
- |- 12:0:0:0 sdz 65:144 active ready running
+|- 11:0:0:0 sdb 8:i6 active ready running
+|- 12:0:0:0 sdz 65:144 active ready running
 ----
 
 include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
 == Recommended Settings
 
-SUSE Linux Enterprise Server 15 SP1 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly.
+SUSE Linux Enterprise Server 12 SP4 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly.
 include::_include/hu/reuse_hu_recommended_settings.adoc[]
 
 
@@ -103,39 +103,22 @@ The following example shows how to correct an overridden default. In this case, 
 
 ----
 defaults {
-   path_checker      readsector0
-   no_path_retry      fail
+ path_checker readsector0
+ no_path_retry fail
 }
-
 devices {
-   device {
-      vendor         "NETAPP  "
-      product         "LUN.*"
-      no_path_retry     queue
-      path_checker      tur
-   }
+ device {
+ vendor "NETAPP "
+ product "LUN.*"
+ no_path_retry queue
+ path_checker tur
+ }
 }
 ----
 
 == Known Problems and Limitations
 
-[cols=4,options="header" width="80%"]
-|===
-| NetApp Bug ID
-| Title
-| Description
-| Bugzilla ID
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1246622[1246622^] | Remote ports transit to a blocked state on SLES15SP1 with Emulex LPe12002 8GB FC during storage failover operations. | Remote ports transit to a blocked state on SLES15SP1 with Emulex LPe12002 8GB Fibre Channel (FC) during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online." Occasionally, the remote port state might continue to read as "blocked” or "not present." This state can lead to a "failed faulty" path to LUNs at the multipath layer as well as an I/O outage for those LUNs. You can check the remoteport's details against the following sample commands:
-
-----
-cat/sys/class/fc_host/host*/device/rport*/fc_remote_ports/rport*/port_name
-
-cat/sys/class/fc_host/host*/device/rport*/fc_remote_ports/rport*/port_state
-----
-
-
-| link:https://bugzilla.suse.com/show_bug.cgi?id=1139137[1139137^]
-|===
+There are no known issues for SUSE Linux Enterprise Server 12 SP4.
 
 == Release Notes
 
