--- a/hu_sles_15SP3.adoc
+++ b/hu_sles_15SP3.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_suse_15SP3.html
+permalink: hu_sles_15SP3.html
 keywords: host utilities, suse linux enterprise server 15 sp3, suse, linux, 15 sp3, netapp, ontap
 summary: Describes how to use SUSE Linux Enterprise Server 15 SP3 with ONTAP
 ---
